--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>Hello world</h1>
+        <h1>Ethan Morgan </h1>
         <p>this is my website</p>
     </body>
 </html>
