--- a/home/index.html
+++ b/home/index.html
@@ -29,10 +29,9 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>Let me introduce myself.</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>I am a student at the University of Michigan studying Computer Science with a special interest in cybersecurity.</p>
 						<ul class="actions">
 							<li><a href="../resume.pdf" target="_blank" class="button primary icon solid fa-download">Resume</a></li>
 						</ul>
@@ -44,8 +43,10 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Ask485 Search Engine - Python, Flask</h3>
+								<p>Built a scalable search engine in Python implementing PageRank and Term Frequency-Inverse Document Frequency (TD-IDF). 
+									I wrote website HTML search interface to display results from backend Python running on Flask via REST API. 
+									Wrote MapReduce functions to parse and index over 30 MB of Wikipedia pages. </p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
