--- a/source/blog.html
+++ b/source/blog.html
@@ -22,7 +22,9 @@
 <p>The result is the vast majority of Brazil's population and economic output existing right on the edge of the sea as immigrants would have to lieterally cross a mountain in order to immigrate into the center of brazil. this geographical feature limits the future of brazils economic prospects because of the large cost to move goods and food from the interior of brazil to the big cities.</p>
 <p>[[Img Alt Text] (Brazil shield)] (https://1.bp.blogspot.com/-e4RUFljr_Fk/XS4E1wbagcI/AAAAAAAAgug/eDapKikLb4Mfqy5uUr5EOCGEl00gHcE2gCLcBGAs/s1600/215B-Image%2BThree%2BCratons.jpg)</p>
 <p><a href="/source/blog/Secondblog">Secondblog</a><br />
-</p>
+# TinaBlog</p>
+<p>Hello! Tina is beautiful!</p>
+<p><a href="/source/blog/TinaBlog">TinaBlog</a></p>
 </div>
 </body>
 </html>
