--- a/source/blog.html
+++ b/source/blog.html
@@ -21,10 +21,12 @@
 <p>Have you ever heard about the Brazilian Shield. No it is not a lieteral shield but it a geographical feature that has defined so much of the countries history. The Brazilian shield is roughly starts in the Amazon with low sea level height and slowly increases (in sea level) all the way to the south eastern edge of brazil. Where when it reaches the Atlantic, has become very large mountains in height. But right before the mountains reach the sea the sea level decreases dramaticly and right before it hits sea level, the sea level platoughs only to then crash into the sea.</p>
 <p>The result is the vast majority of Brazil's population and economic output existing right on the edge of the sea as immigrants would have to lieterally cross a mountain in order to immigrate into the center of brazil. this geographical feature limits the future of brazils economic prospects because of the large cost to move goods and food from the interior of brazil to the big cities.</p>
 <p>[[Img Alt Text] (Brazil shield)] (https://1.bp.blogspot.com/-e4RUFljr_Fk/XS4E1wbagcI/AAAAAAAAgug/eDapKikLb4Mfqy5uUr5EOCGEl00gHcE2gCLcBGAs/s1600/215B-Image%2BThree%2BCratons.jpg)</p>
-<p><a href="/source/blog/Secondblog">Secondblog</a><br />
-# TinaBlog</p>
+<p><a href="/source/blog/Secondblog">Secondblog</a></p>
+<h1 id="tinablog">TinaBlog</h1>
 <p>Hello! Tina is beautiful!</p>
-<p><a href="/source/blog/TinaBlog">TinaBlog</a></p>
+<p><a href="/source/blog/TinaBlog">TinaBlog</a> # testblog</p>
+<p>Hello this is the test blog</p>
+<p><a href="/source/blog/testblog">TinaBlog</a></p>
 </div>
 </body>
 </html>
