--- a/source/home.html
+++ b/source/home.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="../images/professionalHeadshot.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="./images/professionalHeadshot.jpg" alt="" /></a>
 					<h1><strong>I am Ethan Morgan</strong>, a Computer Science Student at The Unviersity of Michigan. <br /> I am seeking an internship for <br /> Summer of 2022.</h1>
 					<!-- <br>
 					<a href="#" class="button primary">Learn More</a> -->
@@ -34,7 +34,7 @@
 						</header>
 						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
 						<ul class="actions">
-							<li><a href="../resume.pdf" target="_blank" class="button primary icon solid fa-download">Resume</a></li>
+							<li><a href="./resume.pdf" target="_blank" class="button primary icon solid fa-download">Resume</a></li>
 						</ul>
 					</section>
 
