--- a/source/home.html
+++ b/source/home.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="./images/professionalHeadshot.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="../images/professionalHeadshot.jpg" alt="" /></a>
 					<h1><strong>I am Ethan Morgan</strong>, a Computer Science Student at The Unviersity of Michigan. <br /> I am seeking an internship for <br /> Summer of 2022.</h1>
 					<!-- <br>
 					<a href="#" class="button primary">Learn More</a> -->
