--- a/source/blog.html
+++ b/source/blog.html
@@ -26,7 +26,7 @@
 <p>Hello! Tina is beautiful!</p>
 <p><a href="/source/blog/TinaBlog">TinaBlog</a> # testblog</p>
 <p>Hello this is the test blog</p>
-<p><a href="/source/blog/testblog">TinaBlog</a></p>
+<p><a href="/source/blog/testblog">testblog</a></p>
 </div>
 </body>
 </html>
